add_subdirectory(common)
add_subdirectory(led)
add_subdirectory(pwm)
add_subdirectory(ws2812)
add_subdirectory(knob)
add_subdirectory(ssd1306)
add_subdirectory(ssd1680)
add_subdirectory(st7789)

add_subdirectory(console)
add_subdirectory(gui)
add_subdirectory(fonts)


add_library(drivers INTERFACE)
