add_subdirectory(blink)
add_subdirectory(pwm_led)
add_subdirectory(knob_ec11)
add_subdirectory(ws2812_circle)
add_subdirectory(ws2812_single)
add_subdirectory(ssd1306_draw)
add_subdirectory(ssd1306_bouncing_ball)
add_subdirectory(ssd1306_console)
add_subdirectory(ssd1680_epaper)
add_subdirectory(st7789_interp)
add_subdirectory(morze)
add_subdirectory(melody)
